[package]
name = "hallway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
warp = {version = "0.3", features = ["compression-brotli"]}
tokio = {version = "1.28.1", features=["rt", "macros", "time"]}

# Config (own and pomerium)
toml = "0.7.4"
serde = "1.0.163"
serde_yaml = "0.9.21"

# Jwt
aliri = {version = "0.6.2", default-features=false, features=["ec", "private-keys"]}
aliri_clock = "0.1.4"
openssl= "0.10.54"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde_json = "1.0.96"

# Rendring
handlebars = "4.3.7"
fluent = "0.16.0"

# Logs
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.40"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl= {version = "0.10.54", features=["vendored"]}

[features]
default=[]
container=[]