[package]
name = "hallway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
warp = {version = "0.3", features = ["compression-brotli"]}
tokio = {version = "1.37", features=["rt", "macros", "time"]}

# Config (own and pomerium)
toml = "0.8"
serde = "1.0"
serde_yaml = "0.9"

# Jwt
aliri = {version = "0.6", default-features=false, features=["ec", "private-keys"]}
aliri_clock = "0.1.4"
openssl= "0.10"
reqwest = { version = "0.12", features = ["blocking","json"] }
serde_json = "1.0"

# Rendring
handlebars = "5.1"
fluent = "0.16.0"

# Logs
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
minify-html = "0.15"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl= {version = "0.10", features=["vendored"]}

[features]
default=[]
container=[]